Some Flex-box & excerise

--- a/flexbox.html
+++ b/flexbox.html
@@ -42,4 +42,9 @@
       <article class="item">Item 19</article>
     </section>
   </body>
+  <!-- ! This is an alert-->
+  <!--* Some important text highlight-->
+  <!--Comparation text below, just a normal comment-->
+  <!--? Something...yeah?-->
+  <!--TODO: This is the coolest-->
 </html>
