--- a/Asinconismo.html
+++ b/Asinconismo.html
@@ -26,7 +26,80 @@
         console.log(new Date().toLocaleTimeString());
       }, 1000); */
 
-      //Existe una función que detiene al setInterval y setTimeOut llamados |clearInterval | clearTimeout|
+      //Existe una función que detiene al setInterval y setTimeOut llamados |clearInterval | clearTimeout
+
+      /*
+      --Procesamiento Single thread y multi-thread
+      || Los hilos son las unidades básicas de proceso realizada por la máquina. Estos procesos pueden ejecutar uno o varios hilos
+
+      --Operaciones de CPU y Operaciones de I/O
+      || Las operaciones de CPU son aquellas que requieren mayor procesamiento de CPU
+      
+      || Las  I/O sn las operaciones que esperan la petición del recurso deseado (Respuesta de una API o del servidor)
+
+      --Operaciones Concurrentes y Paralelas
+      || Concurrencia: Es cuando dos o más tareas progresan simultaneamente. 
+
+      || Paralelismo: Es cuando dos o más tareas se ejecutan al mismo tiempo
+
+      --Operaciones Bloqueantes y No bloqueantes
+      || Bloqueante: Es aquella que no regresa el control hasta que haya terminado su tarea al hilo    principal 
+      
+      ||No bloqueante: Es aquella que se ejecuta y regresa el control al hilo principal y al momento de finalización de la tarea se avisará al hilo para su procesamiento.
+
+      --Operaciones Síncronas y Asíncronas
+      || Síncrona: Refiere a que espera la respuesta de forma inmediata
+
+      || Asíncrona: Refiere a que espera la respuesta en un futuro, así, regresando el control al hilo principal
+      */
+
+      /*
+      JavaScript usa un modelo asíncrono y no bloqueante con un loop de eventos implementado en un sólo hilo (single thread) para operaciones de entrada y salida (I/O)
+      */
+
+      /*Código Síncrono Bloqueante*/
+
+      (() => {
+        console.log("Código síncrono");
+        console.log("------Inicio-------");
+
+        function dos() {
+          console.log("Dos");
+        }
+
+        function uno() {
+          console.log("Uno");
+          dos();
+          console.log("Tres");
+        }
+
+        uno();
+        console.log("------Fin------");
+      })();
+
+      /*Código Asíncrono No bloqueante*/
+
+      (() => {
+        console.log("Código asíncrono");
+        console.log("----Inicio-----");
+
+        function dos() {
+          setTimeout(function () {
+            console.log("Dos");
+          }, 1000);
+        }
+
+        function uno() {
+          setTimeout(function () {
+            console.log("Uno");
+          }, 1000);
+          dos();
+          console.log("Tres");
+        }
+
+        uno();
+        console.log("----Fin-----");
+      })();
     </script>
   </body>
 </html>
