--- a/Asinconismo.html
+++ b/Asinconismo.html
@@ -7,7 +7,7 @@
     <title>Asincronía</title>
   </head>
   <body>
-    <h1>Asíncronía en JS</h1>
+    <h1>Asincronía en JS</h1>
     <script src="js/asincronia.js"></script>
   </body>
 </html>
