--- a/nuevosTipos.html
+++ b/nuevosTipos.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Nuevos tipos</h1>
+    <h1>Nuevos tipos de datos</h1>
     <script src="Js/nuevosTipos.js"></script>
   </body>
 </html>
