--- a/dom.html
+++ b/dom.html
@@ -26,6 +26,56 @@
       <li>And more...</li>
     </ul>
 
+    <!--Separación-->
+    <br />
+    <hr />
+    <br />
+    <h5>Manejo DOM</h5>
+    <p id="que-es">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. In totam maiores
+      cum quis culpa, inventore, tenetur reiciendis saepe laudantium sint
+      ducimus ipsa omnis animi repudiandae beatae minus. Quisquam, ut animi!
+      Ipsa voluptatum repudiandae quibusdam est, molestias atque tenetur
+      asperiores officia deleniti odit quos neque culpa ex placeat qui excepturi
+      recusandae adipisci! Iure, vitae consequuntur! Temporibus expedita ab ut
+      eaque error.
+    </p>
+    <nav id="menu">
+      <ul>
+        <li><a href="#">sección 1</a></li>
+        <li><a href="#">sección 2</a></li>
+        <li><a href="#">sección 3</a></li>
+        <li><a href="#">sección 4</a></li>
+        <li><a href="#">sección 5</a></li>
+      </ul>
+    </nav>
+
+    <input type="text" name="nombre" placeholder="Nombre" />
+    <a class="link-dom" href="dom.html">DOM</a>
+
+    <section class="cards">
+      <figure class="card">
+        <img src="https://placeimg.com/200/200/tech" alt="Tech" />
+        <figcaption>Tech</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="https://placeimg.com/200/200/animals" alt="Animals" />
+        <figcaption>Animals</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="https://placeimg.com/200/200/people" alt="People" />
+        <figcaption>People</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="https://placeimg.com/200/200/arch" alt="Arch" />
+        <figcaption>Architecture</figcaption>
+      </figure>
+      <figure class="card">
+        <img src="https://placeimg.com/200/200/nature" alt="Nature" />
+        <figcaption>Nature</figcaption>
+      </figure>
+    </section>
+
     <a href="https://jonmircha.com/dom">Recurso JonMircha DOM</a>
 
     <script src="Js/dom.js"></script>
