--- a/dom.html
+++ b/dom.html
@@ -51,7 +51,9 @@
     </nav>
 
     <input type="text" name="nombre" placeholder="Nombre" />
-    <a class="link-dom" href="dom.html">DOM</a>
+    <a class="link-dom" href="dom.html" data-description="Document Object Model" data-id="1"
+      >DOM</a
+    >
 
     <section class="cards">
       <figure class="card">
