--- a/dom.html
+++ b/dom.html
@@ -132,6 +132,14 @@
       </figure>
     </template>
 
+    <button onclick="holaMundo()"> Manejador de eventos HTML<button>
+      <br>
+      <br>
+    <button id="evento-semantico">Evento con manejador semántico</button>
+          <br>
+      <br>
+    <button id="evento-multiple">Evento con manejador múltiple<button>
+
     <script src="Js/dom.js"></script>
     <script>
       let texto =
