Add & remove events DOM

--- a/dom.html
+++ b/dom.html
@@ -139,6 +139,9 @@
           <br>
       <br>
     <button id="evento-multiple">Evento con manejador múltiple<button>
+          <br>
+      <br>
+    <button id="evento-remover">Removiendo eventos con manejadores múltiples<button>
 
     <script src="Js/dom.js"></script>
     <script>
