--- a/dom.html
+++ b/dom.html
@@ -132,16 +132,19 @@
       </figure>
     </template>
 
-    <button onclick="holaMundo()"> Manejador de eventos HTML<button>
-      <br>
-      <br>
+    <button onclick="holaMundo()">Manejador de eventos HTML</button>
+    <br />
+    <br />
     <button id="evento-semantico">Evento con manejador semántico</button>
-          <br>
-      <br>
-    <button id="evento-multiple">Evento con manejador múltiple<button>
-          <br>
-      <br>
-    <button id="evento-remover">Removiendo eventos con manejadores múltiples<button>
+    <br />
+    <br />
+    <button id="evento-multiple">Evento con manejador múltiple</button>
+    <br />
+    <br />
+    <button id="evento-remover">
+      Removiendo eventos con manejadores múltiples
+    </button>
+    <br />
 
     <script src="Js/dom.js"></script>
     <script>
