--- a/dom.html
+++ b/dom.html
@@ -44,6 +44,24 @@
       .sepia {
         filter: sepia(1);
       }
+
+      .eventos-flujo div {
+        padding: 4rem;
+        font-size: 2rem;
+        text-align: center;
+      }
+
+      .uno {
+        background-color: yellow;
+      }
+
+      .dos {
+        background-color: gold;
+      }
+
+      .tres {
+        background-color: lightyellow;
+      }
     </style>
   </head>
   <body>
@@ -145,6 +163,22 @@
       Removiendo eventos con manejadores múltiples
     </button>
     <br />
+
+    <h4>Flujo de Eventos</h4>
+    <section class="eventos-flujo">
+      <div class="uno">
+        1
+        <div class="dos">
+          2
+          <div class="tres">
+            3
+            <a href="https://www.google.com" target="_blank" rel="noopener"
+              >google.com</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="Js/dom.js"></script>
     <script>
