Inicio ejercicios DOM

--- a/dom.html
+++ b/dom.html
@@ -179,7 +179,20 @@
         </div>
       </div>
     </section>
-
+    <div style="width: 150%">Manejo del BOM y window</div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <button id="abrir-ventana">Abrir ventana</button>
+    <br />
+    <button id="cerrar-ventana">Cerrar ventana</button>
+    <br />
+    <button id="imprimir-ventana">Imprimir ventana</button>
+    <br />
+    <br />
+    <br />
+    <br />
     <script src="Js/dom.js"></script>
     <script>
       let texto =
